# tilo-agent

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
agent/: core.py  protocol.py
docs/plans/: 2026-02-26-openclaw-prompt-templates-design.md  2026-02-26-pytest-core-coverage.md  2026-02-28-streaming-implementation.md  2026-02-28-streaming-output-design.md
skills/builtin/math_skill/: SKILL.md  tools.py
skills/builtin/time_skill/: SKILL.md
src/: tilo_chat.py
src/agent/: core.py  prompt_builder.py  prompt_files.py  stream.py
src/api/: __init__.py  routes.py
src/llm/: client.py
src/mcp_support/: __init__.py  registry.py
src/memory/: jsonl_store.py
src/prompts/: AGENTS.md  BOOTSTRAP.md  MEMORY.md  SOUL.md  USER.md
src/runtime/: cli.py  file_access.py  session.py
src/skills/: loader.py
src/skills/builtin/math_skill/: SKILL.md
src/skills/builtin/math_skill/scripts/: calc.py
src/skills/builtin/time_skill/: SKILL.md  tools.py
src/skills/builtin/time_skill/scripts/: now.py
tests/: test_agent_core.py  test_api_routes.py  test_chat_stream.py  test_cli_entry.py  test_jsonl_store.py  test_llm_client.py  test_llm_client_import.py  test_mcp_registry.py  test_memory_compat.py  test_memory_jsonl_store.py  test_mock_model.py  test_multi_user_workspace.py  test_no_legacy_tools_refs.py  test_prompt_files.py  test_runtime_file_access.py  test_skills_loader.py  test_stream.py  test_tilo_chat_cli.py  test_tools_base.py  test_tools_registry.py
tools/: base.py  registry.py
