[project]
name = "tilo-agent"
version = "0.1.0"
description = "Minimal AgentScope-based framework with extensible skills and tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentscope",
    "mcp",
    "python-dotenv"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
"Homepage" = "https://github.com/agentscope-ai/agentscope"

[project.scripts]
tilo-chat = "runtime.cli:main"
